--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,9 @@
 @import 'tailwindcss';
+
+@plugin 'daisyui';
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
+
+.icon-sm {
+	@apply h-5 w-5;
+}
