--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,15 @@
 @import 'tailwindcss';
 
-@plugin 'daisyui';
 @plugin '@tailwindcss/forms';
-@plugin '@tailwindcss/typography';
+
+@import './styles/buttons.css';
+@import './styles/cards.css';
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+	--color-scheme: light dark;
+}
 
 .icon-sm {
 	@apply h-5 w-5;
