chore: improving component viewer

--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,7 @@
 
 @import './styles/buttons.css';
 @import './styles/cards.css';
+@import './styles/lists.css';
 
 @custom-variant dark (&:where(.dark, .dark *));
 
